--- a/caste.html
+++ b/caste.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="logo-section"> 
-        <img src="images/HCLIBLogo.png" class="logo-image" alt="Hennepin County Library logo. White text on blue background.">
+        <img src="bookclubboost/docs/assets/HCLIBLogo.png" class="logo-image" alt="Hennepin County Library logo. White text on blue background.">
             <div class="header-div">
                 <h1 class="headerstyle center">
                     Book Club Kit Boosters
@@ -35,7 +35,7 @@
             <div class="center">
                 <a href="https://hclib.bibliocommons.com/v2/record/S109C6185638">
                     <p>   </p>
-                    <img src="images/castelg.png" alt="Image of the cover of Caste: The Origins of Our Discontents.">
+                    <img src="bookclubboost/docs/assets/castelg.png" alt="Image of the cover of Caste: The Origins of Our Discontents.">
                 </a>
             </div>
             
@@ -144,7 +144,7 @@
 <div class="center"> 
         <a 
             href="https://hclib.bibliocommons.com/v2/record/S109C4464887">
-            <img src="images/wos.png" alt="cover of the book The Warmth of Other Suns">
+            <img src="bookclubboost/docs/assets/wos.png" alt="cover of the book The Warmth of Other Suns">
         </a>
     </div>
     <p><a href="https://hclib.bibliocommons.com/v2/record/S109C4464887"><i>The Warmth of Other Suns</i></a> is Isabel Wilkerson's powerful oral history of 
@@ -158,7 +158,7 @@
     <div class="center">
         <a 
             href="https://hclib.bibliocommons.com/v2/record/S109C6308116">
-            <img src="images/viralsm.png" alt="cover of the book The Viral Underclass">
+            <img src="bookclubboost/docs/assets/viralsm.png" alt="cover of the book The Viral Underclass">
         </a>
     </div>
     <p>In <i>Caste</i>, Isabel Wilkerson uses the metaphor of a dormant Siberian virus to explain 
@@ -175,7 +175,7 @@
     <div class="center">
         <a 
             href="https://podcasts.apple.com/us/podcast/oprahs-book-club/id1529009628">
-            <img src="images/oprah1.png" alt="image of apple podcast Oprah Winfrey's Book Club">
+            <img src="bookclubboost/docs/assets/oprah1.png" alt="image of apple podcast Oprah Winfrey's Book Club">
         </a>
     </div>
     <p>
