--- a/caste.html
+++ b/caste.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="logo-section"> 
-        <img src="./assets/HCLIBLogo.png" class="logo-image" alt="Hennepin County Library logo. White text on blue background.">
+        <img src="https://github.com/KateCMlis/bookclubboost/tree/main/docs/assets#:~:text=1%20minute%20ago-,HCLIBLogo.png,-Add%20files%20via" class="logo-image" alt="Hennepin County Library logo. White text on blue background.">
             <div class="header-div">
                 <h1 class="headerstyle center">
                     Book Club Kit Boosters
