--- a/caste.html
+++ b/caste.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="logo-section"> 
-        <img src="github.com/KateCMlis/bookclubboost/blob/main/docs/assets/HCLIBLogo.png" class="logo-image" alt="Hennepin County Library logo. White text on blue background.">
+        <img src="https://github.com/KateCMlis/bookclubboost/blob/main/docs/assets/HCLIBLogo.png?raw=true" class="logo-image" alt="Hennepin County Library logo. White text on blue background.">
             <div class="header-div">
                 <h1 class="headerstyle center">
                     Book Club Kit Boosters
